--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
-define Rules of AgedBrie
-define Rules of Sulfuras
-define Rules of Backstagepasses
+Display Items correctly after several days
 fix the date methods for everything
 
 Refactor
